[package]
name = "lipsum"
version = "0.1.0"
edition = "2021"

[lib]
name = "lipsum"
path = "src/lib/lib.rs"

[[bin]]
name = "lipsum"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }
rand = "0.8.5"
